<resources>
    <string name="app_name">MyBonWays</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sign_in">Login</string>

    <string name="facebook_app_id">1701860226772831</string>
    <string name="tab_map">Map</string>
    <string name="tab_hot">Hot</string>
    <string name="tab_favorite">Categories</string>
    <string name="welcome">Welcome</string>
    <string name="permission_necessary">Permission necessary</string>
    <string name="permission_explanation">We need some &lt;b>mandatories&lt;/b> permissions to provide you with a great experience. Please accept all following requests.</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission_not_all_allowed_explanation">You have to allow all the requested permissions</string>
    <string name="nav_option">Options</string>
    <string name="nav_logout">Log out</string>
    <string name="nav_trader">Trader ?</string>
    <string name="nav_share">Share</string>
    <string name="nav_shop">Shops</string>
    <string name="trader_request_title">Become Trader</string>
    <string name="trader_request_explanation">Would you want to be a trader ?</string>
    <string name="menu_find">Find</string>
    <string name="app_slogan">Find the best near you !</string>
    <string name="wizard_add_shop_title">Add Shop</string>
    <string name="shop">My Shops Booster</string>
    <string name="nav_home">Home</string>
    <string name="wizard_add_product_title">Add Product</string>
    <string name="nav_product">Products</string>
    <string name="products">My Products</string>
    <string name="connectionvia">Connection Via</string>
    <string name="wzp_product_name">Product Name *</string>
    <string name="wzp_product_image">Product Image *</string>
    <string name="wzp_product_description">Description *</string>
    <string name="wzp_product_normal_price">Normal Price *</string>
    <string name="wzp_product_quantity">Quantity *</string>
    <string name="wzp_product_end_on">Promo ends on *</string>
    <string name="wzp_product_start_on">Promo starts on *</string>
    <string name="wzp_product_promo_price">Promo Price *</string>
    <string name="wzp_product_category">Category *</string>
    <string name="wzp_product_shop">Choose Shop *</string>
    <string name="wzs_trade_name">Shop Name *</string>
    <string name="wzs_trade_category">Shop Category *</string>
    <string name="wzs_trade_phone_number">Phone Number *</string>
    <string name="wzs_trade_website">Website</string>
    <string name="wzs_trade_representant">Representer</string>
    <string name="wzs_trade_email">Email *</string>
    <string name="wzs_trade_trade_logo">Shop Logo</string>
    <string name="wzs_trade_nearest_shop">Nearest Shop Name</string>
    <string name="wzs_trade_address">Address *</string>
    <string name="wzs_trade_pick_location">Pick shop location *</string>
    <string name="dialog_title">Choose Category</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_details">Product Details</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="btn_reserve">Reserve</string>
    <string name="label_posted">Posted</string>
    <string name="label_productLeft">Products Left</string>
    <string name="label_timeleft_value">days</string>
    <string name="label_goto">Go to</string>
    <string name="info_tel">Phone:</string>
    <string name="label_timeleft">Time Left</string>
    <string name="nav_reservation">My Reservations</string>
    <string name="menu_category">Category</string>
    <string name="nav_user_account">My Account</string>
    <string name="title_activity_account">My Account</string>
    <string name="subscritpitons">Payment</string>
    <string name="title_activity_subscription">Subscription</string>
    <string name="bundle_free_title">Free</string>
    <string name="bundle_free_description">Offre basique. Completement gratuite, vous beneficiez de 5 posts gratuits et ceci pendant pendant 3 mois. Ainsi vous avez le temps d\'evaluer votre potentiel sur le marché.</string>
    <string name="label_price">Price:</string>
    <string name="bundle_free_price">0</string>
    <string name="label_validity">Validity:</string>
    <string name="bundle_free_validity">60</string>
    <string name="bundle_light_title">Light</string>
    <string name="bundle_light_description">Offre standard. Vous avez utilisé BonWays Free et desormais vous passez à l\'étape superieure. Vous avez droit à 15+1 publications valide un trimestre</string>
    <string name="bundle_light_validity">60</string>
    <string name="bundle_light_price">5000</string>
    <string name="bundle_business_title">Business</string>
    <string name="bundle_business_description">Offre Entreprise. Pour des quantités importantes de publication. Vous avez droit à 65+1 publications. Vous bénéficiez d\'une assistance technique pour la publication de vos articles.</string>
    <string name="bundle_business_price">25000</string>
    <string name="bundle_business_validity">90</string>
    <string name="title_activity_subscription_detail">Subscription Detail</string>
    <string name="how_to_subs">How To Subscribe ?</string>
    <string name="how_to_subs_description" translatable="false">To subscribe, you have to send the amount of the offer via MTN Mobile Money to the number showed below. Then submit the transaction ID in the space provided below and submit. Automatically you will receive a text message. Use the code received in the space below to activate your subscription. &lt;b>&lt;br>OM Phone number: +237 6 77 76 04 05&lt;/b></string>
    <string name="have_a_code">Have an activation Code ?</string>
    <string name="have_a_code_description">Enter your code there:</string>
    <string name="button_submit">Submit</string>
    <string name="code_sample" translatable="false">XBTADOO2N</string>
    <string name="dialog_reservation_title">Confirm Reservation</string>
    <string name="dialog_reservation_content">Would you want to reserve this product ?</string>
    <string name="dialog_reservation_confirmed">Confirmed !</string>
    <string name="title_activity_feedback" translatable="false">Feedback</string>
    <string name="feedback_send">send</string>
    <string name="feedback_message_hint">Enter your request, idea or suggestion here</string>
    <string name="feedback_title">Title</string>
    <string name="action_feedback" translatable="false">FeedBack</string>
    <string name="dialog_comments_title">Comments</string>
    <string name="wizard_publish_product_title">Publish Product</string>
    <string name="need_shop_first">You need to create a Shop first.</string>
    <string name="label_add">Add</string>

</resources>
