<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_shop"
            android:title="@string/nav_shop" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_products"
            android:title="@string/nav_product" />

        <item
            android:id="@+id/nav_reservation"
            android:icon="@drawable/ic_reservation"
            android:title="@string/nav_reservation" />



    </group>

    <item android:title="@string/nav_option">
        <menu>
            <item
                android:id="@+id/nav_trader"
                android:icon="@drawable/ic_trader"
                android:title="@string/nav_trader" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
