<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPanel">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=" "
        android:textColor="#333333"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_middle_short"
        android:padding="@dimen/margin_middle_standard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/shopNameWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/shopName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/wzs_trade_name"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/shopPhoneWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/shopPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/wzs_trade_phone_number"
                    android:inputType="phone" />

            </android.support.design.widget.TextInputLayout>

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/shopCategory"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_short"
                android:paddingRight="@dimen/activity_horizontal_margin"
                app:ms_alignLabels="true"
                app:ms_arrowSize="8dp"
                app:ms_enableErrorLabel="false"
                app:ms_enableFloatingLabel="true"
                app:ms_floatingLabelText="@string/wzs_trade_category"
                app:ms_arrowColor="@color/textColorDark"
                app:ms_baseColor="@color/textColorDark"
                app:ms_errorColor="@color/colorPrimary"
                app:ms_floatingLabelColor="@color/colorPrimary"
                app:ms_highlightColor="@color/colorPrimary"
                app:ms_hintColor="@color/textColorGray"
                app:ms_hint="@string/wzs_trade_category"
                app:ms_multiline="false" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/shopWebsiteWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/shopWebsite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/wzs_trade_website"
                    android:inputType="textWebEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/shopRepresenterWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/shopRepresenter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/wzs_trade_representant"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/shopEmailWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/shopEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/wzs_trade_email"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/shopLogoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="@dimen/margin_middle_standard"
                android:text="@string/wzs_trade_trade_logo"
                android:textColor="@color/textColorDark" />

            <ImageView
                android:id="@+id/shopLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:src="@drawable/your_logo" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>